day5 (2026-07-15)
Microsoft Windows [Version 10.0.26200.8655]
(c) Microsoft Corporation. All rights reserved.

C:\Users\dcsuser\csc209s3>python -m venv my_env

C:\Users\dcsuser\csc209s3>my_env\Scripts\activate

(my_env) C:\Users\dcsuser\csc209s3>pip install numpy
Collecting numpy
  Downloading numpy-2.5.1-cp312-cp312-win_amd64.whl.metadata (6.6 kB)
Downloading numpy-2.5.1-cp312-cp312-win_amd64.whl (12.4 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 12.4/12.4 MB 22.2 MB/s eta 0:00:00
Installing collected packages: numpy
Successfully installed numpy-2.5.1

[notice] A new release of pip is available: 24.2 -> 26.1.2
[notice] To update, run: python.exe -m pip install --upgrade pip

(my_env) C:\Users\dcsuser\csc209s3>python
Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> ls=[6,1,7,9,2]
>>> ls
[6, 1, 7, 9, 2]
>>> ls.sort(reverse=True)
>>> ls
[9, 7, 6, 2, 1]
>>> ls.count(6)
1
>>> ls.index(6)
2
>>> t=(12,4,5)
>>> t[0]
12
>>> t=("john",24,"jaffna")
>>> name=t[0]
>>> t
('john', 24, 'jaffna')
>>> age=t[1]
>>> city=t[2]
>>> name
'john'
>>> hash("john")
6087113122467723312
>>> hash([1,2,3])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unhashable type: 'list'
>>> hash(1,2,3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: hash() takes exactly one argument (3 given)
>>> hash(123)
123
>>> {('A','B'): "Name"}
{('A', 'B'): 'Name'}
>>> codon_table = {('A','T','G': "Methionine")}
  File "<stdin>", line 1
    codon_table = {('A','T','G': "Methionine")}
                               ^
SyntaxError: invalid syntax
>>> codon_table = {('A','T','G'): "Methionine")}
  File "<stdin>", line 1
    codon_table = {('A','T','G'): "Methionine")}
                                              ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '{'
>>> codon_table = {('A','T','G'): "Methionine"}
>>> s1={"ATG","ACG","AGG"}
>>> s2={"ATG","ACC","AGG"}
>>> s1&s2
{'ATG', 'AGG'}
>>> p1={"BRCA1","TP53","EGFR","MYC"}
>>> p2={"TP53","KRAS","EGFR","ALK"}
>>> p1-p2
{'MYC', 'BRCA1'}
>>> range(0,10,2)
range(0, 10, 2)
>>> list(range(0,10,2))
[0, 2, 4, 6, 8]
>>> list(range(0,11,2))
[0, 2, 4, 6, 8, 10]
>>> r = range(0,10,2)
>>> r[0]
0
>>> r[0:5]
range(0, 10, 2)
>>> set(range(0,11,2))
{0, 2, 4, 6, 8, 10}
>>> tuple(range(0,11,2))
(0, 2, 4, 6, 8, 10)
>>> dict(range(0,11,2))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: cannot convert dictionary update sequence element #0 to a sequence
>>> s1="john"
>>> s[4]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 's' is not defined. Did you mean: 'ls'?
>>> s1="john"
>>> s1[4]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> ls=[2,3,4]
>>> for value in ls:
...     print(value)
...
2
3
4
>>> p1 = "ACGGCD"
>>> for value in p1:
...     print(value)
...
A
C
G
G
C
D
>>> for value in p1:
...     print(value," ")
...
A
C
G
G
C
D
>>> len("ACGGCD")
6
>>> for value in p1:
...     print(len(value))
...
1
1
1
1
1
1
>>> p2 = "AACGGGD"
>>> for value in p2:
...     print(len(value))
...
1
1
1
1
1
1
1
>>> for value in p2:
...
KeyboardInterrupt
>>> p2 = "AACGGGD"
>>> counts = {}
>>>
>>> for value in p2:
...     if value in counts:
...         counts[value] += 1
...     else:
...         counts[value] = 1
...
>>> print(counts)
{'A': 2, 'C': 1, 'G': 3, 'D': 1}
>>>